# rover

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  Dockerfile  Procfile  README.md  ROVER.md  config.example.yaml  nixpacks.toml  pyproject.toml  requirements.txt  retailers.yaml  rover.db-shm  rover.db-wal
migrations/: 001_initial_schema.sql
rover/: api.py  celery_app.py  claimer.py  config.py  db.py  deps.py  dev_server.py  emailer.py  gmail.py  logger.py  main.py  notifier.py  parser.py  policies.py  price_checker.py  scheduler.py  scraper.py  tasks.py  token_store.py
scripts/: seed_mock_data.py
tests/: conftest.py  test_claimer.py  test_db.py  test_notifier.py  test_parser.py  test_policies.py  test_price_checker.py  test_scraper.py
